infrastructure/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_grpcweb
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_grpcweb
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/order." }
                          route:
                            cluster: order_service
                            timeout: 0s
                        - match: { prefix: "/" }
                          route:
                            cluster: product_service
                            timeout: 0s
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - safe_regex:
                                regex: ".*"
                          allow_methods: "GET,PUT,DELETE,POST,OPTIONS"
                          allow_headers: >-
                            keep-alive,user-agent,x-user-agent,cache-control,
                            content-type,content-transfer-encoding,
                            x-accept-content-transfer-encoding,
                            x-grpc-web,grpc-timeout,authorization,
                            connect-protocol-version,connect-timeout-ms,
                            x-bypass-cache
                          expose_headers: "grpc-status,grpc-message,grpc-encoding,grpc-accept-encoding"
                          max_age: "1728000"
                          allow_credentials: true
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: product_service
      connect_timeout: 1s
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options:
              max_concurrent_streams: 1000
              initial_stream_window_size: 1048576
              initial_connection_window_size: 10485760
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - max_connections: 10000
            max_pending_requests: 10000
            max_requests: 10000
      load_assignment:
        cluster_name: product_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: product-service
                      port_value: 5001

    - name: order_service
      connect_timeout: 1s
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options:
              max_concurrent_streams: 1000
              initial_stream_window_size: 1048576
              initial_connection_window_size: 10485760
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - max_connections: 10000
            max_pending_requests: 10000
            max_requests: 10000
      load_assignment:
        cluster_name: order_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order-service
                      port_value: 5004
